--- a/parent-poms/lib-cpp-parent-pom/pom.xml
+++ b/parent-poms/lib-cpp-parent-pom/pom.xml
@@ -8,16 +8,16 @@
 		<relativePath>../cpp-parent-pom</relativePath>
 	</parent>
 
-    <artifactId>stlib-parent-pom</artifactId>
+    <artifactId>lib-cpp-parent-pom</artifactId>
 	<packaging>pom</packaging>
 
+	<name>Maven C++ Library Parent Pom</name>
+	<description>Parent pom for generate a C++ dynamic library using the nar-maven-plugin.</description>
+	
 	<properties>
 		<finalPrefix>${libFinalPrefix}</finalPrefix>
 		<checkSeverity>style</checkSeverity>	
 	</properties>
-	
-	<name>Maven C++ Static Library Parent Pom</name>
-	<description>Parent pom for generate a C++ static library using the nar-maven-plugin.</description>
 	
 	<build>
 		<plugins>
@@ -27,13 +27,9 @@
 				<configuration>
 					<libraries>
 						<library>
-							<type>static</type>
+							<type>shared</type>
 						</library>
 					</libraries>
-					<linker>
-						<options combine.self="override">
-						</options>
-					</linker>
 				</configuration>
 			</plugin>
 		</plugins>
