--- a/parent-poms/stlib-c-parent-pom/pom.xml
+++ b/parent-poms/stlib-c-parent-pom/pom.xml
@@ -3,21 +3,21 @@
 
 	<parent>
 		<groupId>org.gjs.pom</groupId>
-		<artifactId>cpp-parent-pom</artifactId>
+		<artifactId>c-parent-pom</artifactId>
 		<version>1.0.0</version>
-		<relativePath>../cpp-parent-pom</relativePath>
+		<relativePath>../c-parent-pom</relativePath>
 	</parent>
 
-    <artifactId>lib-parent-pom</artifactId>
+    <artifactId>stlib-c-parent-pom</artifactId>
 	<packaging>pom</packaging>
 
-	<name>Maven C++ Library Parent Pom</name>
-	<description>Parent pom for generate a C++ dynamic library using the nar-maven-plugin.</description>
-	
 	<properties>
 		<finalPrefix>${libFinalPrefix}</finalPrefix>
 		<checkSeverity>style</checkSeverity>	
 	</properties>
+	
+	<name>Maven C Static Library Parent Pom</name>
+	<description>Parent pom for generate a C++ static library using the nar-maven-plugin.</description>
 	
 	<build>
 		<plugins>
@@ -27,9 +27,13 @@
 				<configuration>
 					<libraries>
 						<library>
-							<type>shared</type>
+							<type>static</type>
 						</library>
 					</libraries>
+					<linker>
+						<options combine.self="override">
+						</options>
+					</linker>
 				</configuration>
 			</plugin>
 		</plugins>
